force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__BaselineUnitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BaselineUnitId__c</fullName>
    <label>Baseline Unit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BaselineUnitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>