force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__BaselineValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__BaselineValueText__c</fullName>
    <label>Baseline Value Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BaselineValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>