force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__CareObservationInterpretationCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareObservationInterpretationCode__c</fullName>
    <label>Care ObservationI nterpretation Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareObservationInterpretationCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>