force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__CareObservationItemValueType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareObservationItemValueType__c</fullName>
    <label>CareObservationItemValueType</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareObservationItemValueType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>