force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__IsObserved__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsObserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Observed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsObserved</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>