force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__MissingDataReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__MissingDataReasonText__c</fullName>
    <label>Missing Data Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MissingDataReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>