force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__ObservationEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservationEndDateTime__c</fullName>
    <label>Observation End DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservationEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>