force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__ObservationItemType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservationItemType__c</fullName>
    <label>Observation Item Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservationItemType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>