force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__ObservedValueDenominatorNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedValueDenominatorNumber__c</fullName>
    <label>Observed Value Denominator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedValueDenominatorNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>