force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__ObservedValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedValueText__c</fullName>
    <label>Observed Value Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>