force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__ObservedValueUnit__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedValueUnit__c</fullName>
    <label>Observed Value Unit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedValueUnit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>