force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__rel_1720282912335_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720282912335_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareObservationItem_ObservedValueUni_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>CareObservationItem_ObservedValueUni_rel</relationshipLabel>
    <relationshipName>rel_1720282912335_end</relationshipName>
    <type>Lookup</type>
</CustomField>