force-app/main/default/objects/ssot__CareObservationItem__dlm/fields/ssot__ValueInterpretation__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValueInterpretation__c</fullName>
    <label>Value Interpretation</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValueInterpretation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>